@@ -1,0 +1,6 @@
+def editor_role(ignored):
+    return 'icemac.ab.calendar.Editor'
+
+
+def visitor_role(ignored):
+    return 'icemac.ab.calendar.Visitor'
