@@ -9,6 +9,8 @@
 
 - Added calendar view displaying a whole year.
 
+- Allow calendar users to edit their username and/or password in master data.
+
 
 1.2.0 (2014-01-02)
 ==================
